Code restructuring, standardizing cleaning steps
Clarified key cleaning steps that were required. Decided to use average value for air density instead of calculating from air pressure/air temperature/relative humidity. Re-implemented code so that data was cleaned sooner.

--- a/notebooks/FLNRO_WMB_cleaning_pgadmin.ipynb
+++ b/notebooks/FLNRO_WMB_cleaning_pgadmin.ipynb
@@ -35,8 +35,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trying to include FLNRO_WMB results\n",
-    "- only wind data available\n",
+    "FLNRO_WMB data cleaning (data too large to clean with Pandas)\n",
+    "- only wind data available (no solar)\n",
     "\n",
     "Steps:\n",
     "- load into pgAdmin\n",
@@ -45,6 +45,7 @@
     "- drop rows without windspeed values\n",
     "- convert windspeed from km/h to m/s\n",
     "- remove rows with values outside of reasonable range\n",
+    "- replace \"-\" with \"_\" in station_id column\n",
     "- add to wind_data_final"
    ]
   },
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -128,9 +129,8 @@
        "'\\nselect key as column, count(*) as null_values\\nfrom my_table t\\ncross join jsonb_each_text(to_jsonb(t))\\nwhere value is null\\ngroup by key;\\n'"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -167,32 +167,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting 'time' column in flnro_wmb_data to timestamp\n",
-      "Creating flnro_wmb_wind table\n"
-     ]
-    },
-    {
-     "ename": "SyntaxError",
-     "evalue": "syntax error at or near \"CREATE\"\nLINE 3: CREATE TABLE flnro_wmb_wind\n        ^\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mSyntaxError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32md:\\School\\LHL\\capstone_project_data\\LHL_Capstone_Project\\notebooks\\trials.ipynb Cell 13\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m sql2 \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mDROP TABLE IF EXISTS flnro_wmb_wind\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mCREATE TABLE flnro_wmb_wind\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m \u001b[39mLIKE flnro_fern_wind\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m \u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCreating flnro_wmb_wind table\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m cursor\u001b[39m.\u001b[39;49mexecute(sql2)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m con\u001b[39m.\u001b[39mcommit()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m sql3 \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\"\"\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39m    INSERT INTO flnro_wmb_wind(temperature, wind_speed, relative_humidity, time, station_id, network_id)\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39m    SELECT temperature, wind_speed, relative_humidity, time, station_id, network_id \u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39m    FROM flnro_wmb_data;\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/School/LHL/capstone_project_data/LHL_Capstone_Project/notebooks/trials.ipynb#X14sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m \u001b[39m\"\"\"\u001b[39m\n",
-      "\u001b[1;31mSyntaxError\u001b[0m: syntax error at or near \"CREATE\"\nLINE 3: CREATE TABLE flnro_wmb_wind\n        ^\n"
+      "Converting 'time' column in flnro_wmb_data to timestamp\n"
      ]
     }
    ],
    "source": [
-    "# drop everything except temperature, wind_speed, relative_humidity, time, station_id, network_id\n",
-    "# no air pressure value available\n",
+    "# drop everything except wind_speed, time, station_id, network_id\n",
     "postgres_password = os.environ['POSTGRES_PASS']\n",
     "con = psycopg2.connect(\n",
     "    database='lhl_capstone_project',\n",
@@ -217,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -253,14 +240,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adding values from flnro_wmb_data to flnro_wmb_wind\n"
+      "Adding values from flnro_wmb_data to flnro_wmb_wind\n",
+      "Successfully added values\n"
      ]
     }
    ],
@@ -278,19 +266,20 @@
     "cursor = con.cursor()\n",
     "\n",
     "sql3 = f\"\"\"\n",
-    "    INSERT INTO flnro_wmb_wind(air_temperature, wind_speed, relative_humidity, time, station_id, network_id)\n",
-    "    SELECT temperature, wind_speed, relative_humidity, time, station_id, network_id \n",
+    "    INSERT INTO flnro_wmb_wind(wind_speed, time, station_id, network_id)\n",
+    "    SELECT wind_speed, time, station_id, network_id \n",
     "    FROM flnro_wmb_data;\n",
     "\"\"\"\n",
     "print(f\"Adding values from flnro_wmb_data to flnro_wmb_wind\")\n",
     "\n",
     "cursor.execute(sql3)\n",
-    "con.commit()"
+    "con.commit()\n",
+    "print(f\"Successfully added values\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -413,45 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying flnro_wmb_wind values to wind_data\n",
-      "Successfully copied values\n"
-     ]
-    }
-   ],
-   "source": [
-    "# add values to wind_data\n",
-    "postgres_password = os.environ['POSTGRES_PASS']\n",
-    "con = psycopg2.connect(\n",
-    "    database='lhl_capstone_project',\n",
-    "    user='postgres',\n",
-    "    password=f'{postgres_password}',\n",
-    "    host='localhost',\n",
-    "    port='5432'\n",
-    ")\n",
-    "con.rollback()\n",
-    "cursor = con.cursor()\n",
-    "\n",
-    "sql = \"\"\"INSERT INTO wind_data(air_temperature, wind_speed, relative_humidity, time, station_id, network_id)\n",
-    "        SELECT air_temperature, wind_speed, relative_humidity, time, station_id, network_id\n",
-    "        FROM flnro_wmb_wind\n",
-    "\"\"\"\n",
-    "\n",
-    "cursor.execute(sql)\n",
-    "print('Copying flnro_wmb_wind values to wind_data')\n",
-    "con.commit()\n",
-    "print('Successfully copied values')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +427,7 @@
     "con.rollback()\n",
     "cursor = con.cursor()\n",
     "\n",
-    "sql = \"\"\"UPDATE wind_data SET network_id = REPLACE(network_id, 'FLNRO-WMB', 'FLNRO_WMB')\"\"\"\n",
+    "sql = \"\"\"UPDATE flnro_wmb_wind SET network_id = REPLACE(network_id, 'FLNRO-WMB', 'FLNRO_WMB')\"\"\"\n",
     "\n",
     "print('Converting FLNRO-WMB to FLNRO_WMB')\n",
     "\n",
@@ -488,20 +439,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting FLNRO-WMB to FLNRO_WMB\n",
-      "Network ID successfully converted\n"
+      "Copying flnro_wmb_wind values to wind_data\n",
+      "Successfully copied values\n"
      ]
     }
    ],
    "source": [
-    "# do the same for ENV_AQN and FLNRO_FERN\n",
+    "# add values to wind_data\n",
     "postgres_password = os.environ['POSTGRES_PASS']\n",
     "con = psycopg2.connect(\n",
     "    database='lhl_capstone_project',\n",
@@ -513,51 +464,21 @@
     "con.rollback()\n",
     "cursor = con.cursor()\n",
     "\n",
-    "sql = \"\"\"UPDATE wind_data SET network_id = REPLACE(network_id, 'FLNRO-FERN', 'FLNRO_FERN')\"\"\"\n",
+    "sql = \"\"\"INSERT INTO wind_data(wind_speed, time, station_id, network_id)\n",
+    "        SELECT wind_speed, time, station_id, network_id\n",
+    "        FROM flnro_wmb_wind\n",
+    "\"\"\"\n",
     "\n",
-    "print('Converting FLNRO-FERN to FLNRO_FERN')\n",
-    "\n",
+    "print('Copying flnro_wmb_wind values to wind_data')\n",
     "cursor.execute(sql)\n",
     "con.commit()\n",
-    "\n",
-    "print('Network ID successfully converted')"
+    "print('Successfully copied values')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converting ENV-AQN to ENV_AQN\n",
-      "Network ID successfully converted\n"
-     ]
-    }
-   ],
-   "source": [
-    "postgres_password = os.environ['POSTGRES_PASS']\n",
-    "con = psycopg2.connect(\n",
-    "    database='lhl_capstone_project',\n",
-    "    user='postgres',\n",
-    "    password=f'{postgres_password}',\n",
-    "    host='localhost',\n",
-    "    port='5432'\n",
-    ")\n",
-    "con.rollback()\n",
-    "cursor = con.cursor()\n",
-    "\n",
-    "sql = \"\"\"UPDATE wind_data SET network_id = REPLACE(network_id, 'ENV-AQN', 'ENV_AQN')\"\"\"\n",
-    "\n",
-    "print('Converting ENV-AQN to ENV_AQN')\n",
-    "\n",
-    "cursor.execute(sql)\n",
-    "con.commit()\n",
-    "\n",
-    "print('Network ID successfully converted')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -577,8 +498,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.5"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
