--- a/notebooks/postgres_database_connection.ipynb
+++ b/notebooks/postgres_database_connection.ipynb
@@ -26,45 +26,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['BCH_data_clean.csv',\n",
-       " 'BCH_solar.csv',\n",
-       " 'BCH_wind.csv',\n",
-       " 'CRD_data_clean.csv',\n",
-       " 'CRD_solar.csv',\n",
-       " 'CRD_wind.csv',\n",
-       " 'EC_raw_data_clean.csv',\n",
-       " 'EC_raw_wind.csv',\n",
-       " 'ENV_AQN_data_clean.csv',\n",
-       " 'ENV_AQN_wind.csv',\n",
-       " 'FLNRO_FERN_data.csv',\n",
-       " 'FLNRO_FERN_solar.csv',\n",
-       " 'FLNRO_FERN_wind.csv',\n",
-       " 'FLNRO_WMB_data.csv',\n",
-       " 'metadata',\n",
-       " 'MoTIe_data_clean.csv',\n",
-       " 'MoTIe_wind.csv',\n",
-       " 'MoTIm_data_clean.csv',\n",
-       " 'MoTIm_wind.csv',\n",
-       " 'MVan_data_clean.csv',\n",
-       " 'MVan_wind.csv',\n",
-       " 'UNBC_CAM_data_clean.csv',\n",
-       " 'UNBC_CAM_solar.csv',\n",
-       " 'UNBC_CAM_wind.csv']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# create list of files\n",
-    "files = os.listdir(path_2)\n",
-    "files"
+    "# define an explicit path variable for processed data (required for pgAdmin4 to locate system files)\n",
+    "path_3 = r\"D:\\School\\LHL\\capstone_project_data\\LHL_Capstone_Project\\data\""
    ]
   },
   {
@@ -85,10 +50,12 @@
        " 'EC_raw_wind.csv',\n",
        " 'ENV_AQN_data_clean.csv',\n",
        " 'ENV_AQN_wind.csv',\n",
+       " 'final_tables',\n",
        " 'FLNRO_FERN_data.csv',\n",
        " 'FLNRO_FERN_solar.csv',\n",
        " 'FLNRO_FERN_wind.csv',\n",
        " 'FLNRO_WMB_data.csv',\n",
+       " 'metadata',\n",
        " 'MoTIe_data_clean.csv',\n",
        " 'MoTIe_wind.csv',\n",
        " 'MoTIm_data_clean.csv',\n",
@@ -106,8 +73,53 @@
     }
    ],
    "source": [
-    "# remove 'metadata' from list\n",
+    "# create list of files\n",
+    "files = os.listdir(path_2)\n",
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BCH_data_clean.csv',\n",
+       " 'BCH_solar.csv',\n",
+       " 'BCH_wind.csv',\n",
+       " 'CRD_data_clean.csv',\n",
+       " 'CRD_solar.csv',\n",
+       " 'CRD_wind.csv',\n",
+       " 'EC_raw_data_clean.csv',\n",
+       " 'EC_raw_wind.csv',\n",
+       " 'ENV_AQN_data_clean.csv',\n",
+       " 'ENV_AQN_wind.csv',\n",
+       " 'FLNRO_FERN_data.csv',\n",
+       " 'FLNRO_FERN_solar.csv',\n",
+       " 'FLNRO_FERN_wind.csv',\n",
+       " 'FLNRO_WMB_data.csv',\n",
+       " 'MoTIe_data_clean.csv',\n",
+       " 'MoTIe_wind.csv',\n",
+       " 'MoTIm_data_clean.csv',\n",
+       " 'MoTIm_wind.csv',\n",
+       " 'MVan_data_clean.csv',\n",
+       " 'MVan_wind.csv',\n",
+       " 'UNBC_CAM_data_clean.csv',\n",
+       " 'UNBC_CAM_solar.csv',\n",
+       " 'UNBC_CAM_wind.csv']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove 'metadata' and 'final_tables' from list\n",
     "files.remove('metadata')\n",
+    "files.remove('final_tables')\n",
     "files"
    ]
   },
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -209,9 +221,6 @@
       "Adding columns to BCH_wind\n",
       "Adding columns to BCH_wind\n",
       "Adding columns to BCH_wind\n",
-      "Adding columns to BCH_wind\n",
-      "Adding columns to BCH_wind\n",
-      "Adding columns to BCH_wind\n",
       "Adding columns to CRD_data_clean\n",
       "Adding columns to CRD_data_clean\n",
       "Adding columns to CRD_data_clean\n",
@@ -232,8 +241,6 @@
       "Adding columns to CRD_wind\n",
       "Adding columns to CRD_wind\n",
       "Adding columns to CRD_wind\n",
-      "Adding columns to CRD_wind\n",
-      "Adding columns to CRD_wind\n",
       "Adding columns to EC_raw_data_clean\n",
       "Adding columns to EC_raw_data_clean\n",
       "Adding columns to EC_raw_data_clean\n",
@@ -254,8 +261,6 @@
       "Adding columns to EC_raw_wind\n",
       "Adding columns to EC_raw_wind\n",
       "Adding columns to EC_raw_wind\n",
-      "Adding columns to EC_raw_wind\n",
-      "Adding columns to EC_raw_wind\n",
       "Adding columns to ENV_AQN_data_clean\n",
       "Adding columns to ENV_AQN_data_clean\n",
       "Adding columns to ENV_AQN_data_clean\n",
@@ -267,9 +272,6 @@
       "Adding columns to ENV_AQN_data_clean\n",
       "Adding columns to ENV_AQN_data_clean\n",
       "Adding columns to ENV_AQN_data_clean\n",
-      "Adding columns to ENV_AQN_wind\n",
-      "Adding columns to ENV_AQN_wind\n",
-      "Adding columns to ENV_AQN_wind\n",
       "Adding columns to ENV_AQN_wind\n",
       "Adding columns to ENV_AQN_wind\n",
       "Adding columns to ENV_AQN_wind\n",
@@ -300,9 +302,6 @@
       "Adding columns to FLNRO_FERN_wind\n",
       "Adding columns to FLNRO_FERN_wind\n",
       "Adding columns to FLNRO_FERN_wind\n",
-      "Adding columns to FLNRO_FERN_wind\n",
-      "Adding columns to FLNRO_FERN_wind\n",
-      "Adding columns to FLNRO_FERN_wind\n",
       "Adding columns to FLNRO_WMB_data\n",
       "Adding columns to FLNRO_WMB_data\n",
       "Adding columns to FLNRO_WMB_data\n",
@@ -353,9 +352,6 @@
       "Adding columns to MoTIe_data_clean\n",
       "Adding columns to MoTIe_data_clean\n",
       "Adding columns to MoTIe_data_clean\n",
-      "Adding columns to MoTIe_wind\n",
-      "Adding columns to MoTIe_wind\n",
-      "Adding columns to MoTIe_wind\n",
       "Adding columns to MoTIe_wind\n",
       "Adding columns to MoTIe_wind\n",
       "Adding columns to MoTIe_wind\n",
@@ -378,15 +374,12 @@
       "Adding columns to MoTIm_wind\n",
       "Adding columns to MoTIm_wind\n",
       "Adding columns to MoTIm_wind\n",
-      "Adding columns to MoTIm_wind\n",
-      "Adding columns to MoTIm_wind\n",
       "Adding columns to MVan_data_clean\n",
       "Adding columns to MVan_data_clean\n",
       "Adding columns to MVan_data_clean\n",
       "Adding columns to MVan_data_clean\n",
       "Adding columns to MVan_data_clean\n",
       "Adding columns to MVan_data_clean\n",
-      "Adding columns to MVan_wind\n",
       "Adding columns to MVan_wind\n",
       "Adding columns to MVan_wind\n",
       "Adding columns to MVan_wind\n",
@@ -413,9 +406,6 @@
       "Adding columns to UNBC_CAM_solar\n",
       "Adding columns to UNBC_CAM_solar\n",
       "Adding columns to UNBC_CAM_solar\n",
-      "Adding columns to UNBC_CAM_wind\n",
-      "Adding columns to UNBC_CAM_wind\n",
-      "Adding columns to UNBC_CAM_wind\n",
       "Adding columns to UNBC_CAM_wind\n",
       "Adding columns to UNBC_CAM_wind\n",
       "Adding columns to UNBC_CAM_wind\n",
@@ -425,7 +415,7 @@
    ],
    "source": [
     "for file in files:\n",
-    "    functions.add_sql_columms(file)"
+    "    functions.add_sql_columms(file, path_3)"
    ]
   },
   {
@@ -437,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +462,7 @@
    ],
    "source": [
     "for file in files:\n",
-    "    functions.add_values(file)"
+    "    functions.add_values(file, path_3)"
    ]
   },
   {
@@ -496,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -533,20 +523,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting 'time' columnm in BCH_solar to timestamp\n",
+      "Converting 'time' column in BCH_solar to timestamp\n",
       "Adding values from BCH_solar to solar_data\n",
-      "Converting 'time' columnm in CRD_solar to timestamp\n",
+      "Converting 'time' column in CRD_solar to timestamp\n",
       "Adding values from CRD_solar to solar_data\n",
-      "Converting 'time' columnm in FLNRO_FERN_solar to timestamp\n",
+      "Converting 'time' column in FLNRO_FERN_solar to timestamp\n",
       "Adding values from FLNRO_FERN_solar to solar_data\n",
-      "Converting 'time' columnm in UNBC_CAM_solar to timestamp\n",
+      "Converting 'time' column in UNBC_CAM_solar to timestamp\n",
       "Adding values from UNBC_CAM_solar to solar_data\n"
      ]
     }
@@ -558,30 +548,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting 'time' columnm in BCH_wind to timestamp\n",
+      "Converting 'time' column in BCH_wind to timestamp\n",
       "Adding values from BCH_wind to wind_data\n",
-      "Converting 'time' columnm in CRD_wind to timestamp\n",
+      "Converting 'time' column in CRD_wind to timestamp\n",
       "Adding values from CRD_wind to wind_data\n",
-      "Converting 'time' columnm in EC_raw_wind to timestamp\n",
+      "Converting 'time' column in EC_raw_wind to timestamp\n",
       "Adding values from EC_raw_wind to wind_data\n",
-      "Converting 'time' columnm in ENV_AQN_wind to timestamp\n",
+      "Converting 'time' column in ENV_AQN_wind to timestamp\n",
       "Adding values from ENV_AQN_wind to wind_data\n",
-      "Converting 'time' columnm in FLNRO_FERN_wind to timestamp\n",
+      "Converting 'time' column in FLNRO_FERN_wind to timestamp\n",
       "Adding values from FLNRO_FERN_wind to wind_data\n",
-      "Converting 'time' columnm in MoTIe_wind to timestamp\n",
+      "Converting 'time' column in MoTIe_wind to timestamp\n",
       "Adding values from MoTIe_wind to wind_data\n",
-      "Converting 'time' columnm in MoTIm_wind to timestamp\n",
+      "Converting 'time' column in MoTIm_wind to timestamp\n",
       "Adding values from MoTIm_wind to wind_data\n",
-      "Converting 'time' columnm in MVan_wind to timestamp\n",
+      "Converting 'time' column in MVan_wind to timestamp\n",
       "Adding values from MVan_wind to wind_data\n",
-      "Converting 'time' columnm in UNBC_CAM_wind to timestamp\n",
+      "Converting 'time' column in UNBC_CAM_wind to timestamp\n",
       "Adding values from UNBC_CAM_wind to wind_data\n"
      ]
     }
@@ -589,6 +579,13 @@
    "source": [
     "# add wind files to wind_data\n",
     "functions.merge_tables(wind_files, \"wind_data\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Proceed to clean FLNRO_WMB data in pgAdmin, then add FLNRO_WMB_wind values to wind_data*"
    ]
   },
   {
@@ -670,23 +667,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create new database tables for wind/solar data joined with station metadata"
+    "### Create new database tables for wind/solar data joined with station metadata\n",
+    "Final table names:\n",
+    "- solar_data_final\n",
+    "- wind_data_final"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully joined metadata with solar_data\n"
+     ]
+    }
+   ],
    "source": [
     "functions.create_joined_table(\"solar_data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully joined metadata with wind_data\n"
+     ]
+    }
+   ],
    "source": [
     "functions.create_joined_table(\"wind_data\")"
    ]
@@ -700,11 +716,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "functions.close_conn()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export pgAdmin tables\n",
+    "- save to .csv\n",
+    "- import to Tableau"
    ]
   },
   {
