--- a/notebooks/analyzing_data.ipynb
+++ b/notebooks/analyzing_data.ipynb
@@ -64,6 +64,7 @@
     "import pandas as pd\n",
     "import os\n",
     "import math\n",
+    "import matplotlib\n",
     "import functions"
    ]
   },
